changed text in jade home.jade and Deockerfile

--- a/views/home.jade
+++ b/views/home.jade
@@ -6,7 +6,7 @@ html
     div.container
       div.jumbotron
         h1 Hello Friends!!!
-        p Click the button below to head over to my podcast...
+        p Click the button below to head over to my website...
         p 
-          a.btn.btn-primary(href="http://intechwetrustpodcast.com") Podcast
+          a.btn.btn-primary(href="http://sunilrathod.net") My Website
         p
